move files into separate folders

--- a/html/options.html
+++ b/html/options.html
@@ -22,6 +22,6 @@
         </div>
         
         <!-- load javascript: unique html page javascript file -->
-        <script type="text/javascript" src="options.js"></script>
+        <script type="text/javascript" src="../js/options.js"></script>
     </body>
 </html>
